Ajustes finos no layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">challenge your dev</string>
+
+        <string name="your_string_here"><u>Click here to read</u>.</string>
 </resources>
